--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "0.5.9",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
