--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "0.5.9",
+    "eslint-config-prettier": "^9.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
