refactor: use import path map, rename files, created ui folder and exclude composedComponents folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/context/BurgerMenuContext.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",
+    "src/context/burgerMenuContext.js"
+  ],
   "exclude": ["node_modules"]
 }
