--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "formik": "^2.4.5",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -26,8 +27,10 @@
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "0.5.9",
     "eslint-config-prettier": "^9.0.0",
+    "postcss-import": "^15.1.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
