--- a/package.json
+++ b/package.json
@@ -9,26 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.3.2",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
-    "formik": "^2.4.5",
     "next": "13.4.7",
+    "nodemailer": "^6.9.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
-    "typewriter-effect": "^2.20.1"
+    "typewriter-effect": "^2.20.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "0.5.9",
+    "@types/nodemailer": "^6.4.13",
     "eslint-config-prettier": "^9.0.0",
     "postcss-import": "^15.1.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
