--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "0.5.9",
+    "@types/aos": "^3.0.6",
     "@types/nodemailer": "^6.4.13",
     "eslint-config-prettier": "^9.0.0",
     "postcss-import": "^15.1.0",
