--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.6",
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.14",
+    "cssnano": "^6.0.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
